--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,3 +116,6 @@ NetServerMaxTickRate=60
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+
